# testotvoe_crud_FastApi

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-test  Makefile  README.md  celerybeat-schedule  docker-compose-test.yml  docker-compose.yml  main.py  openapi.json  pyproject.toml  setup.cfg  tasks.py
migrations/: env.py
migrations/versions/: 2024_01_19_0000-6b29b6b0f82b_create_tables_menu_submenu_dish.py  2024_01_21_1208-28fa1e9aafea_create_tables_menu_submenu_dish.py  2024_01_21_1810-c71a89ff5675_create_tables.py
src/admin/: hash
src/api/v1_handlers/: dish.py  menu.py  submenu.py
src/core/: config.py
src/crud/: base_classes.py  dish.py  menu.py  submenu.py
src/database/: redis_cache.py  session.py
src/database/models/: __init__.py  base.py  dish.py  menu.py  submenu.py
src/schemas/: dish.py  menu.py  submenu.py
src/service/: dish.py  menu.py  submenu.py
tests/: conftest.py
tests/api/api_v1/: test_dish.py  test_menu.py  test_postman.py  test_submenu.py
tests/crud/: test_dish.py  test_menu.py  test_submenu.py
